add all sliders

--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -1,13 +1,13 @@
 <header class="page__header header">
- <div class="container">
-  <div class="header__container">
-   <div class="header__main">
-    <div class="header__cell">
+ <div class="header__main">
+  <div class="container">
+   <div class="header__main-container">
+    <div class="header__cell m-logo">
      <a href="#" class="header__main-logo i-wrap">
-      <img class="header__main-logo-img i-full" src=" " alt="">
+      <img class="header__main-logo-img i-full" src="/src/img/svg/logo.svg" alt="">
      </a>
     </div>
-    <div class="header__cell">
+    <div class="header__cell m-nav">
      <nav class="header__main-nav">
       <ul class="header__main-nav-list">
        <li class="header__main-nav-item">
@@ -26,15 +26,19 @@
      </nav>
     </div>
     <div class="header__cell"></div>
-    <div class="header__cell">
+    <div class="header__cell m-burger">
      <button class="header__main-burger"></button>
     </div>
    </div>
-   <div class="header__menu">
-    <div class="header__menu-search">
-     <input class="header__menu-search-inp" type="text">
+  </div>
+ </div>
+ <div class="header__menu">
+  <div class="container">
+   <div class="header__menu-container">
+    <form action="#" method="post" class="header__menu-search">
+     <input class="header__menu-search-inp" type="text" placeholder="Поиск по сайту...">
      <button class="header__menu-search-btn"></button>
-    </div>
+    </form>
     <div class="header__menu-row">
      <nav class="header__menu-nav">
       <ul class="header__menu-nav-list">
