--- a/src/scss/main-1.scss
+++ b/src/scss/main-1.scss
@@ -84,7 +84,7 @@
   }
   &.m-panel {
    flex-direction: column;
-   justify-content: stretch;
+   justify-content: flex-end;
    align-items: center;
    display: flex;
    flex-direction: column;
@@ -133,6 +133,7 @@
   font-size: var(--sz-14);
  }
  &__slider-nav {
+  max-height: 430px;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -165,21 +166,70 @@
 }
 //@mark about
 .about {
+ background: url('/src/img/about-bg.png') center / cover no-repeat;
  &__container {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 305px 1fr 220px;
+  grid-template-rows: 1fr 230px;
  }
  &__cell {
+  &.m-left {
+   grid-column: 1/2;
+   grid-row: 1/3;
+   border-right: 1px solid rgba(0, 0, 0, 0.25);
+  }
+  &.m-main {
+   grid-column: 2/3;
+   grid-row: 1/2;
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   justify-content: flex-end;
+   padding: 0 80px 110px 80px;
+  }
+  &.m-right {
+   grid-column: 3/4;
+   grid-row: 1/3;
+   border-left: 1px solid rgba(0, 0, 0, 0.25);
+  }
+  &.m-list {
+  }
  }
  &__title {
+  font-size: var(--sz-32);
+  font-weight: 700;
+  margin-bottom: 25px;
+  & span {
+   color: var(--t-22B24C);
+  }
  }
  &__text {
+  margin-bottom: 25px;
  }
  &__btn {
  }
+ &__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  padding: 30px 0;
+  align-items: center;
+ }
  &__item {
+  display: flex;
+  gap: 21px;
  }
  &__item-num {
+  font-size: var(--24);
+  font-weight: 700;
+  color: var(--t-22B24C);
  }
  &__item-text {
+  font-size: var(--20);
+  font-weight: 600;
  }
 }
 //@mark benefits
