--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -108,6 +108,7 @@ body.page {
  line-height: 1.2;
  color: var(--t-101010);
  background-color: var(--b-fff);
+ cursor: none;
  &.j-lock {
   overflow: hidden;
  }
