--- a/src/scss/main-1.scss
+++ b/src/scss/main-1.scss
@@ -15,6 +15,7 @@
  &__slider-wrapper {
  }
  &__slide {
+  overflow: hidden;
  }
 }
 //@mark swiper
@@ -234,28 +235,128 @@
 }
 //@mark benefits
 .benefits {
+ height: 100%;
+ overflow-y: auto;
  &__container {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 305px 1fr 220px;
  }
  &__cell {
+  &.m-main {
+   border-left: 1px solid rgba(0, 0, 0, 0.25);
+   border-right: 1px solid rgba(0, 0, 0, 0.25);
+   padding: 200px 100px 100px;
+   &::after {
+    height: 100%;
+   }
+   &::before {
+    height: 100%;
+   }
+  }
  }
  &__title {
+  font-size: var(--sz-40);
+  font-weight: 500;
+  margin-bottom: 50px;
+  & span {
+   color: var(--t-22B24C);
+  }
  }
  &__box {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
  }
  &__card {
+  position: relative;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  padding: 25px;
+  border-radius: 35px;
+  overflow: hidden;
+  &:hover {
+   & .benefits__card-bg {
+    opacity: 1;
+    visibility: visible;
+   }
+  }
+ }
+ &__card-bg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 150%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  display: none;
+  transform: translate(-50%, -50%);
+  display: flex;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.1s linear 0s, visibility 0.1s linear 0s;
+  &::after {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   aspect-ratio: 1;
+   content: '';
+   border-radius: 50%;
+   transform: translateY(-50%);
+   background: linear-gradient(
+    90deg,
+    rgba(34, 178, 76, 1) 0%,
+    rgba(255, 255, 255, 1) 70%
+   );
+   animation: bg-rotate 3s linear 0s infinite;
+  }
  }
  &__card-inner {
+  position: relative;
+  display: flex;
+  gap: 45px;
+  background-color: var(--b-fff);
+  border-radius: 35px;
+  z-index: 10;
+  overflow: hidden;
+  &.m-reverse {
+   flex-direction: row-reverse;
+  }
  }
  &__card-visual {
+  flex: 1 0 525px;
  }
  &__card-visual-img {
+  border-radius: 35px;
  }
  &__card-info {
+  padding: 35px 5px;
  }
  &__card-title {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  margin-bottom: 15px;
+  font-size: var(--sz-24);
+  & b {
+   font-size: var(--sz-16);
+   font-weight: 600;
+   color: var(--t-22B24C);
+  }
+  & span span {
+   color: var(--t-22B24C);
+  }
  }
  &__card-text {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
  }
  &__card-text-piece {
+  font-size: var(--sz-14);
+  & strong {
+   font-weight: 500;
+  }
  }
 }
