--- a/src/scss/main-1.scss
+++ b/src/scss/main-1.scss
@@ -224,12 +224,12 @@
   gap: 21px;
  }
  &__item-num {
-  font-size: var(--24);
+  font-size: var(--sz-24);
   font-weight: 700;
   color: var(--t-22B24C);
  }
  &__item-text {
-  font-size: var(--20);
+  font-size: var(--sz-20);
   font-weight: 600;
  }
 }
