--- a/src/scss/different/fonts.scss
+++ b/src/scss/different/fonts.scss
@@ -4,54 +4,54 @@
  font-style: normal;
  font-weight: 300;
  font-display: swap;
- src: url('../../fonts/Geometria-Light.woff2') format('woff2');
+ src: url('../fonts/Geometria-Light.woff2') format('woff2');
 }
 @font-face {
  font-family: 'Geometria';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
- src: url('../../fonts/Geometria-Bold.woff2') format('woff2');
+ src: url('../fonts/Geometria-Bold.woff2') format('woff2');
 }
 @font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
- src: url('../../fonts/Montserrat-Light.woff2') format('woff2');
+ src: url('../fonts/Montserrat-Light.woff2') format('woff2');
 }
 @font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
- src: url('../../fonts/Montserrat-Regular.woff2') format('woff2');
+ src: url('../fonts/Montserrat-Regular.woff2') format('woff2');
 }
 @font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
- src: url('../../fonts/Montserrat-Medium.woff2') format('woff2');
+ src: url('../fonts/Montserrat-Medium.woff2') format('woff2');
 }
 @font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
- src: url('../../fonts/Montserrat-SemiBold.woff2') format('woff2');
+ src: url('../fonts/Montserrat-SemiBold.woff2') format('woff2');
 }
 @font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
- src: url('../../fonts/Montserrat-Bold.woff2') format('woff2');
+ src: url('../fonts/Montserrat-Bold.woff2') format('woff2');
 }
 @font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 800;
  font-display: swap;
- src: url('../../fonts/Montserrat-ExtraBold.woff2') format('woff2');
+ src: url('../fonts/Montserrat-ExtraBold.woff2') format('woff2');
 }
