--- a/src/scss/main-1.scss
+++ b/src/scss/main-1.scss
@@ -274,6 +274,7 @@
   padding: 25px;
   border-radius: 35px;
   overflow: hidden;
+  background-color: var(--b-fff);
   &:hover {
    & .benefits__card-bg {
     opacity: 1;
@@ -313,8 +314,10 @@
   }
  }
  &__card-inner {
+  min-height: 300px;
   position: relative;
   display: flex;
+  align-items: center;
   gap: 45px;
   background-color: var(--b-fff);
   border-radius: 35px;
@@ -325,6 +328,7 @@
   }
  }
  &__card-visual {
+  align-self: stretch;
   flex: 1 0 525px;
  }
  &__card-visual-img {
